--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
         <main class="main-content">
             <header class="top-header">
                 <div class="header-left">
+                    <!-- Hamburger menu for mobile -->
+                    <button id="sidebarToggle" class="hamburger-menu" aria-label="Toggle sidebar" style="display:none;">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
                     <h1 id="pageTitle">Dashboard</h1>
                     <p id="pageSubtitle">Overview of your sales performance</p>
                 </div>
